--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
+# MAKE SURE TO LEAVE THE DENY LIST AT THE TOP OF THE FILE !!!
+# BEGIN DENY LIST --
+# END DENY LIST --
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteBase /
