--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ application/logs/*
 composer.lock
 
 /vendor/
+/application/vendor/
+/application/vendor/*
 
 # IDE Files
 #-------------------------
