composer and local files

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "components/jqueryui": "^1.12",
         "nnnick/chartjs": "^2.6",
         "components/bootstrap": "^3.3",
-        "datatables/datatables": "^1.10"
+        "datatables/datatables": "^1.10",
+        "fullcalendar/fullcalendar": "^3.4"
     },
     "authors": [
         {
