d3 install + radar images

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "components/bootstrap": "^3.3",
         "datatables/datatables": "^1.10",
         "fullcalendar/fullcalendar": "^3.4",
-        "components/font-awesome": "^4.7"
+        "components/font-awesome": "^4.7",
+        "mbostock/d3": "^3.5"
     },
     "authors": [
         {
